packages/sci-cream/src/snapshots/sci_cream__balancing__tests__balance_quality_boozy_abv_vs_pac.snap
---
source: packages/sci-cream/src/balancing.rs
expression: "report_balance_quality(&comps_from_names(BOOZY_ING), &BOOZY_DISPARATE_TARGETS,\nBOTH_SOLVERS, Some(BOOZY_ING))"
---
targets:
  TotalSugars     17.00
  PACtotal        28.00
  ABV              4.00

[nalgebra]
  [           ingredient           | qty ]
  3.25% Milk                      -1116.92
  40% Cream                       1173.55
  Sucrose                           33.37
  Grand Marnier Cordon Rouge        10.00

  [    key     | target | achieved |  error  ]
  TotalSugars     17.00     17.00      0.00 pp
  PACtotal        28.00     28.00      0.00 pp
  ABV              4.00      4.00      0.00 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        1       0.00 pp     0.00 pp

[nnls]
  [           ingredient           | qty ]
  3.25% Milk                         0.00
  40% Cream                          8.30
  Sucrose                           15.38
  Grand Marnier Cordon Rouge         4.92

  [    key     | target | achieved |  error  ]
  TotalSugars     17.00     16.66      2.01 pp
  PACtotal        28.00     28.35      1.25 pp
  ABV              4.00      1.97     50.84 pp

  [    sum     |  neg. |    max    |    rms  ]
     0.2859        0      50.84 pp    29.39 pp
