packages/sci-cream/src/snapshots/sci_cream__balancing__tests__balance_quality_light_premium_fat_vs_energy.snap
---
source: packages/sci-cream/src/balancing.rs
expression: "report_balance_quality(&comps_from_names(DAIRY_SUGAR_ING),\n&LIGHT_PREMIUM_TARGETS, BOTH_SOLVERS, Some(DAIRY_SUGAR_ING))"
---
targets:
  Energy             150.00
  MilkFat             16.00
  MSNF                11.00
  TotalSugars         18.00

[nalgebra]
  [           ingredient           | qty ]
  3.25% Milk                        60.33
  40% Cream                         25.46
  Skimmed Milk Powder                4.21
  Sucrose                            9.99

  [      key       | target | achieved |  error  ]
  Energy             150.00    187.64     25.09 pp
  MilkFat             16.00     12.15     24.09 pp
  MSNF                11.00     10.72      2.58 pp
  TotalSugars         18.00     15.83     12.05 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      25.09 pp    18.45 pp

[nnls]
  [           ingredient           | qty ]
  3.25% Milk                        60.33
  40% Cream                         25.46
  Skimmed Milk Powder                4.21
  Sucrose                            9.99

  [      key       | target | achieved |  error  ]
  Energy             150.00    187.64     25.09 pp
  MilkFat             16.00     12.15     24.09 pp
  MSNF                11.00     10.72      2.58 pp
  TotalSugars         18.00     15.83     12.05 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      25.09 pp    18.45 pp
