packages/sci-cream/src/snapshots/sci_cream__balancing__tests__balance_quality_priority_pod_tradeoff.snap
---
source: packages/sci-cream/src/balancing.rs
expression: "report_balance_quality(&comps_from_names(DAIRY_ING), &DAIRY_DISPARATE_TARGETS,\nPOD_PRIORITY_RUNS, Some(DAIRY_ING))"
---
targets:
  Energy             200.00
  MilkFat             12.00
  MSNF                 8.00
  POD                  0.50

[baseline]
  [           ingredient           | qty ]
  3.25% Milk                        70.37
  40% Cream                         29.63
  Skimmed Milk Powder                0.00

  [      key       | target | achieved |  error  ]
  Energy             200.00    154.92     22.54 pp
  MilkFat             12.00     14.14     17.83 pp
  MSNF                 8.00      7.73      3.41 pp
  POD                  0.50      0.67     34.77 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      34.77 pp    22.62 pp

[POD High]
  [           ingredient           | qty ]
  3.25% Milk                        46.79
  40% Cream                         53.21
  Skimmed Milk Powder                0.00

  [      key       | target | achieved |  error  ]
  Energy             200.00    230.12     15.06 pp
  MilkFat             12.00     22.80     90.04 pp
  MSNF                 8.00      6.95     13.16 pp
  POD                  0.50      0.61     21.16 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      90.04 pp    47.32 pp

[POD Critical]
  [           ingredient           | qty ]
  3.25% Milk                        13.50
  40% Cream                         86.50
  Skimmed Milk Powder                0.00

  [      key       | target | achieved |  error  ]
  Energy             200.00    336.26     68.13 pp
  MilkFat             12.00     35.04    191.97 pp
  MSNF                 8.00      5.85     26.92 pp
  POD                  0.50      0.51      1.96 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0     191.97 pp   102.74 pp
