packages/sci-cream/src/snapshots/sci_cream__balancing__tests__balance_quality_sorbet_sweetness_vs_hardness.snap
---
source: packages/sci-cream/src/balancing.rs
expression: "report_balance_quality(&comps_from_names(SORBET_ING),\n&SORBET_DISPARATE_TARGETS, BOTH_SOLVERS, Some(SORBET_ING))"
---
targets:
  TotalSolids     32.00
  TotalSugars     26.00
  PACtotal        32.00
  POD             14.00
  Stabilizers      0.40

[nalgebra]
  [           ingredient           | qty ]
  Water                             71.41
  Sucrose                           10.82
  Dextrose                          12.92
  Underbelly Sorbet Stabilizer...    4.85

  [    key     | target | achieved |  error  ]
  TotalSolids     32.00     27.55     13.89 pp
  TotalSugars     26.00     22.71     12.66 pp
  PACtotal        32.00     33.41      4.40 pp
  POD             14.00     20.33     45.22 pp
  Stabilizers      0.40      4.85   1111.47 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0    1111.47 pp   497.55 pp

[nnls]
  [           ingredient           | qty ]
  Water                             71.41
  Sucrose                           10.82
  Dextrose                          12.92
  Underbelly Sorbet Stabilizer...    4.85

  [    key     | target | achieved |  error  ]
  TotalSolids     32.00     27.55     13.89 pp
  TotalSugars     26.00     22.71     12.66 pp
  PACtotal        32.00     33.41      4.40 pp
  POD             14.00     20.33     45.22 pp
  Stabilizers      0.40      4.85   1111.47 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0    1111.47 pp   497.55 pp
