packages/sci-cream/src/snapshots/sci_cream__balancing__tests__balancing_issues_report_input_errors.snap
---
source: packages/sci-cream/src/balancing.rs
expression: "report_balancing_issues(&comps_from_names(DAIRY_ING), &targets, &priorities,\nSome(DAIRY_ING),)"
---
palette:
  3.25% Milk
  40% Cream
  Skimmed Milk Powder
targets:
  MilkFat                  NaN
  MSNF                   -3.00
  TotalSolids            30.00
  TotalSolids            32.00
priorities:
  MilkFat             High
  MilkFat             Critical
  POD                 High

[error] Target for 'Milk Fat' is not finite (NaN)
[error] Target for 'MSNF' is negative (-3), but it cannot be below zero
[error] 'Solids' appears more than once in the targets
[warning] Target for 'Solids' (32.00) exceeds target for 'Solids' (30.00), but no non-negative ingredient mix can satisfy both — every ingredient's 'Solids' ≤ its 'Solids'
[error] 'Milk Fat' appears more than once in the priorities
[warning] Priority set for 'POD', which is not among the targets, so it has no effect
