packages/sci-cream/src/snapshots/sci_cream__balancing__tests__balancing_issues_report_multiple_warnings.snap
---
source: packages/sci-cream/src/balancing.rs
expression: "report_balancing_issues(&comps_from_names(DAIRY_SUGAR_ING),\n&[(CompKey::MilkFat.into(), 50.0), (CompKey::Sucrose.into(), 20.0),\n(CompKey::TotalSugars.into(), 15.0), (CompKey::CocoaSolids.into(), 5.0),],\n&[], Some(DAIRY_SUGAR_ING),)"
---
palette:
  3.25% Milk
  40% Cream
  Skimmed Milk Powder
  Sucrose
targets:
  MilkFat                50.00
  Sucrose                20.00
  TotalSugars            15.00
  CocoaSolids             5.00

[warning] Target for 'Milk Fat' (50.00) is outside the reachable range [0.00, 40.00]
[warning] No ingredient contributes to 'Cocoa Solids', so its target cannot be affected
[warning] Target for 'Sucrose' (20.00) exceeds target for 'Sugars' (15.00), but no non-negative ingredient mix can satisfy both — every ingredient's 'Sucrose' ≤ its 'Sugars'
